# foundry

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  foundry.toml  secrets.env.template  setup.sh
config/: foundry.env.example
crates/foundry-agent/: Cargo.toml
crates/foundry-agent/src/: config.rs  docker.rs  github_app.rs  main.rs  server.rs  watchdog.rs
crates/foundry-core/: Cargo.toml
crates/foundry-core/src/: cloudflare.rs  config.rs  github.rs  lib.rs  types.rs
crates/foundryd/: Cargo.toml
crates/foundryd/src/: auth.rs  cloudflare.rs  config.rs  db.rs  docker.rs  main.rs  scheduler.rs  watchdog.rs
crates/foundryd/src/routes/: agent.rs  frontend.rs  health.rs  mod.rs  webhook.rs
crates/foundryd/templates/: base.html  index.html  job.html  repos.html
docker/: compose.yml
examples/: foundry.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ContainerList.tsx  Layout.tsx  LogViewer.tsx
frontend/src/components/ui/: badge.tsx  switch.tsx
frontend/src/lib/: api.ts  auth.tsx  utils.ts
frontend/src/pages/: Dashboard.tsx  JobDetail.tsx  RepoDetail.tsx  Repositories.tsx  Schedules.tsx
migrations/: 001_init.sql  002_enhance_schema.sql  003_comprehensive_data.sql  004_pr_builds_and_reruns.sql  005_stages_metrics_scheduling.sql  006_repo_config.sql
scripts/: deploy.sh
