[package]
name = "foundry-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "foundry-agent"
path = "src/main.rs"

[dependencies]
foundry-core = { path = "../foundry-core" }

tokio.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

serde.workspace = true
serde_json.workspace = true

uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

jsonwebtoken = "9"
base64 = "0.22"
